[gd_scene load_steps=12 format=3 uid="uid://8vyvaxykm4g4"]

[ext_resource type="PackedScene" uid="uid://b3bd2ccqkh00a" path="res://Inventory/UI/InventoryUI/nInventoryUI.tscn" id="1_x6p71"]
[ext_resource type="Script" uid="uid://dlkijgainja7j" path="res://Scripts/scrCharacterRegister.gd" id="2_cbp6g"]
[ext_resource type="Script" uid="uid://dhdrxna4ooxij" path="res://Character/scrCharacter.gd" id="3_n4b4m"]
[ext_resource type="Resource" uid="uid://bhdvldq5o1m0l" path="res://Character/Characters/rSlime.tres" id="4_idfla"]
[ext_resource type="Script" uid="uid://dtbqlt8shj24b" path="res://Scripts/scrCombatManager.gd" id="5_idfla"]
[ext_resource type="Resource" uid="uid://bpgn4u4gf56w" path="res://Character/Characters/rSkeleton.tres" id="5_vwlks"]
[ext_resource type="Resource" uid="uid://swafbebokb5g" path="res://Character/Characters/rOrc.tres" id="6_4kpeb"]
[ext_resource type="Resource" uid="uid://cthf622hxw7xg" path="res://Character/Characters/rWolf.tres" id="7_gc5i1"]
[ext_resource type="Resource" uid="uid://croc7fprjc5ic" path="res://Character/Characters/rMage.tres" id="8_gc5i1"]
[ext_resource type="Script" uid="uid://bg0uiysd0i8ja" path="res://Scripts/GameManager/scrGameManager.gd" id="10_4kpeb"]
[ext_resource type="Script" uid="uid://dho7oenng3gns" path="res://Scripts/scrUIController.gd" id="11_gc5i1"]

[node name="Node" type="Node"]

[node name="InventoryUI" parent="." instance=ExtResource("1_x6p71")]
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 1.0
offset_top = 1.0
offset_right = 383.0
offset_bottom = 215.0
grow_horizontal = 1
grow_vertical = 1

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(192, 108)
zoom = Vector2(3, 3)

[node name="CharacterRegister" type="Node" parent="."]
script = ExtResource("2_cbp6g")
mSpawnableEnemies = Array[ExtResource("3_n4b4m")]([ExtResource("4_idfla"), ExtResource("5_vwlks"), ExtResource("6_4kpeb"), ExtResource("7_gc5i1")])
mActiveCharacter = ExtResource("8_gc5i1")
metadata/_custom_type_script = "uid://dlkijgainja7j"

[node name="CombatManager" type="Node" parent="."]
script = ExtResource("5_idfla")
metadata/_custom_type_script = "uid://dtbqlt8shj24b"

[node name="GameStateManager" type="Node" parent="."]
script = ExtResource("10_4kpeb")
metadata/_custom_type_script = "uid://bg0uiysd0i8ja"

[node name="UIController" type="Node" parent="."]
script = ExtResource("11_gc5i1")
metadata/_custom_type_script = "uid://dho7oenng3gns"
